kubernetes/k8s-centos-vagrant/samples/application/azure/azure-file-demo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: azure-file-demo
  labels:
    deployment: azure-file-demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azure-file-demo
    spec:
      volumes:
      - name: azure-file-demo-storage
        persistentVolumeClaim:
         claimName: azure-file-demo-pvc
      containers:
      - name: demo-container
        image: nginx:latest
        ports:
        - name: http-server
          containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: azure-file-demo-storage
---
apiVersion: v1
kind: Service
metadata:
  name: azure-file-demo-svc
  labels:
    svc: azure-file-demo-svc
spec:
  ports:
  - name: svc-port
    port: 30080
    targetPort: http-server
  selector:
    app: azure-file-demo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: azure-file-demo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: b3.tools-cluster.platform.mnscorp.net
    http:
      paths:
      - backend:
          serviceName: azure-file-demo-svc
          servicePort: svc-port
